// file: queue/proto/requests/get_queue_health_request.proto
// version: 1.0.0
// guid: 9862f197-381f-41d3-a980-953ef636c78d

edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";

import "google/protobuf/timestamp.proto";
import "pkg/queue/proto/cluster_info.proto";
import "pkg/queue/proto/get_cluster_info_request.proto";
import "pkg/queue/proto/get_cluster_info_response.proto";
import "pkg/queue/proto/get_queue_stats_response.proto";
import "pkg/queue/proto/health_status.proto";
import "pkg/queue/proto/metric_type.proto";
import "pkg/queue/proto/stats_granularity.proto";
import "pkg/queue/proto/time_range.proto";
import "pkg/queue/proto/topic_info.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto";

message GetQueueHealthRequest {
  // Specific queue names to check (empty = all queues)
  repeated string queue_names = 1;

  // Whether to include detailed health metrics
  bool include_details = 2;
}
