// file: queue/proto/responses/get_queue_health_response.proto
// version: 1.0.0
// guid: ca800078-3add-48f9-9559-c95d23232cea

edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "pkg/queue/proto/cluster_health.proto";
import "pkg/queue/proto/cluster_info.proto";
import "pkg/queue/proto/get_cluster_info_request.proto";
import "pkg/queue/proto/get_cluster_info_response.proto";
import "pkg/queue/proto/get_queue_stats_response.proto";
import "pkg/queue/proto/health_status.proto";
import "pkg/queue/proto/metric_type.proto";
import "pkg/queue/proto/queue_health.proto";
import "pkg/queue/proto/stats_granularity.proto";
import "pkg/queue/proto/time_range.proto";
import "pkg/queue/proto/topic_info.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto";

message GetQueueHealthResponse {
  // Health status for each queue
  repeated QueueHealth queue_health = 1;

  // Overall cluster health
  ClusterHealth cluster_health = 2;
}
