// filepath: pkg/queue/proto/messages/topic_info.proto
// file: queue/proto/messages/topic_info.proto
// version: 1.0.0
// guid: 6a7b8c9d-0e1f-2a3b-4c5d-6e7f8a9b0c1d
//
// Message definitions for queue module
//
edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "pkg/queue/proto/queue_state.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/proto;queuepb";

/**
 * Information about a topic in the pub/sub system.
 */
message TopicInfo {
  // Name of the topic
  string name = 1;

  // Current state of the topic
  gcommon.v1.queue.QueueState state = 2;

  // Timestamp when the topic was created
  google.protobuf.Timestamp created_at = 3;

  // Timestamp when the topic was last modified
  google.protobuf.Timestamp updated_at = 4;

  // Number of active subscriptions to this topic
  int32 subscription_count = 5;

  // Total number of messages published to this topic
  int64 total_messages = 6;

  // Number of messages currently in the topic
  int64 pending_messages = 7;

  // Topic configuration
  TopicConfig config = 8;

  // Topic statistics
  TopicStats stats = 9;

  // Labels/tags associated with the topic
  map<string, string> labels = 10;
}

/**
 * Configuration for a topic.
 */
message TopicConfig {
  // Message retention duration
  int64 retention_duration_seconds = 1;

  // Maximum message size in bytes
  int64 max_message_size = 2;

  // Whether the topic supports message ordering
  bool ordered_delivery = 3;

  // Message schema enforcement
  string schema_name = 4;
}

/**
 * Statistics for a topic.
 */
message TopicStats {
  // Messages published per second (current rate)
  double publish_rate = 1;

  // Average message size in bytes
  double avg_message_size = 2;

  // Peak messages per second
  double peak_publish_rate = 3;

  // Total bytes published
  int64 total_bytes = 4;
}
