// file: proto/gcommon/v1/queue/cluster_info.proto
// version: 1.0.0
// guid: 3c4d5e6f-7a8b-9c0d-1e2f-3a4b5c6d7e8f

edition = "2023";

package gcommon.v1.queue;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/queue";

/**
 * Cluster information for queue management.
 * Contains metadata about the message queue cluster.
 */
message ClusterInfo {
  // Cluster identifier
  string cluster_id = 1;

  // Cluster name
  string name = 2;

  // Cluster version
  string version = 3;

  // Number of nodes in cluster
  int32 node_count = 4;

  // Number of active brokers
  int32 active_brokers = 5;

  // Cluster status (healthy, degraded, offline)
  string status = 6;

  // Cluster uptime in seconds
  int64 uptime_seconds = 7;

  // Total topics in cluster
  int32 total_topics = 8;

  // Total partitions in cluster
  int32 total_partitions = 9;

  // Cluster leader node
  string leader_node = 10;

  // Cluster metadata
  map<string, string> metadata = 11 [lazy = true];

  // Last health check timestamp
  google.protobuf.Timestamp last_health_check = 12 [lazy = true];
}
