// file: proto/gcommon/v1/queue/get_queue_stats_request.proto
// version: 1.0.0
// guid: 7dc18176-1123-444f-8040-b7e352b501d6

edition = "2023";

package gcommon.v1.queue;

import "gcommon/v1/common/stats_granularity.proto";
import "gcommon/v1/metrics/time_range.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/v1/queue";

message GetQueueStatsRequest {
  // Name of the queue
  string queue_name = 1;

  // Time range for statistics
  gcommon.v1.metrics.MetricsTimeRange time_range = 2;

  // Granularity of statistics (hourly, daily, etc.)
  StatsGranularity granularity = 3;
}
