// file: proto/gcommon/v1/queue/api/get_cluster_info_response.proto
// file: proto/gcommon/v1/queue/messages/get_cluster_info_response.proto
// version: 1.0.0
// guid: 3a4b5c6d-7e8f-9a0b-1c2d-3e4f5a6b7c8d
//
// Response definitions for queue module
//
edition = "2023";

package gcommon.v1.queue;



import "google/protobuf/go_features.proto";
import "gcommon/v1/queue/messages/cluster_info.proto";
import "gcommon/v1/queue/messages/node_info.proto";



option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue";

/**
 * Response containing cluster information.
 */
message GetClusterInfoResponse {
  // Detailed cluster information
  gcommon.v1.queue.ClusterInfo cluster_info = 1;

  // Node information
  repeated gcommon.v1.queue.NodeInfo nodes = 2;

  // Whether the cluster is currently healthy
  bool is_healthy = 3;

  // Any warnings or issues with the cluster
  repeated string warnings = 4;

  // Error message if failed to get info
  string error_message = 5;
}
// This file needs proper implementation
