// file: proto/gcommon/v2/queue/queue_stats_response.proto
// version: 1.0.0
// guid: 5944c9a3-ae37-4aac-b6dc-36b7a9c0eaa5

edition = "2023";

package queue.v2;

import "queue/v2/queue_stats.proto";
import "queue/v2/queue_stats_point.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/queue/v2";

message QueueStatsResponse {
  // Queue statistics
  QueueStats stats = 1;

  // Time series data
  repeated QueueStatsPoint time_series = 2 [(buf.validate.field).repeated.min_items = 1];
}
